--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -4,8 +4,7 @@
 .faqs-page,
 .your-rights-page,
 .about-us-page,
-.blog-page,
-.blog-item-page {
+.blog-page {
     main {
         padding-top: 40px;
     }
