--- a/resources/sass/pages/_content.scss
+++ b/resources/sass/pages/_content.scss
@@ -21,7 +21,7 @@
         list-style-type: none;
     }
 
-    ul {
+    ul.bullets {
         //padding: 0 0 0 50px;
         margin: 30px 0 50px 0;
 
@@ -83,11 +83,8 @@
     }
 
     hr {
-        border: 0;
-        float: left;
         width: 100%;
-        height: 2px;
-        background-color: $green;
+        height: 3px;
     }
 
     .btn-link {
