--- a/resources/sass/layout/_blog.scss
+++ b/resources/sass/layout/_blog.scss
@@ -108,6 +108,9 @@
 
     .jumbotron {
         height: 350px;
+        background-position: left;
+        background-repeat: no-repeat;
+        background-size: cover;
     }
 
     .blog-content {
