--- a/resources/sass/layout/_blog.scss
+++ b/resources/sass/layout/_blog.scss
@@ -1,4 +1,3 @@
-
 // ========================BLOGS SECTION================================
 .blog-section-parent {
     //width: $pageWrap;
@@ -19,48 +18,32 @@
         .blog-wrap {
             text-decoration: none !important;
 
-            a:hover {
-                //top: -289.25px;
-                //box-shadow: 0 0 0 #3686a3;
-                text-decoration: none !important;
-
-                .btn-read-more {
-                    background-position: right;
-                }
-
-                //.icon .overlay {
-                //    background-color: rgba(237,3,115,0.3);
-                //}
-
-            }
-
             a {
                 text-decoration: none !important;
             }
 
-            //width: 33.33%;
-            //float: left;
-
-            .icon {
+            .image-wrapper {
                 position: relative;
+                overflow: hidden;
 
                 img {
                     width: 100%;
-                }
-
-                .overlay {
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    width: 100%;
-                    height: 100%;
                     transition: $transition;
                 }
+
+                //
+                //.overlay {
+                //    position: absolute;
+                //    top: 0;
+                //    left: 0;
+                //    width: 100%;
+                //    height: 100%;
+                //    transition: $transition;
+                //}
             }
 
             .title {
-                font-size: 20px;
-                font-weight: 400;
+                @include font-size(20);
                 letter-spacing: -0.6px;
                 line-height: 24px;
             }
@@ -77,6 +60,22 @@
                 font-weight: 600;
                 letter-spacing: -0.72px;
                 line-height: 28.8px;
+            }
+
+            &:hover {
+                //top: -289.25px;
+                //box-shadow: 0 0 0 #3686a3;
+                text-decoration: none !important;
+
+                .image-wrapper {
+                    img {
+                        transform: scale3d(1.1, 1.1, 1.1);
+                    }
+                }
+
+                .btn-read-more {
+                    background-position: right;
+                }
             }
         }
     }
@@ -120,7 +119,7 @@
     }
 
     .sharing-icons {
-        li  {
+        li {
             margin-right: 12px;
 
             svg {
