border radius blog image wrapper

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -8,9 +8,9 @@ $headings-font-weight: normal; // font is bold, so normal is standard bold
 //$font-size-base: 0.9rem;
 
 // Line-height
-$line-height-base: 1;
-$line-height-lg: 1;
-$line-height-sm: 1;
+$line-height-base: 1.3;
+//$line-height-lg: 1;
+//$line-height-sm: 1;
 
 // Colors
 $enable-gradients: true;
