--- a/resources/sass/layout/_blog.scss
+++ b/resources/sass/layout/_blog.scss
@@ -24,6 +24,7 @@
 
             .image-wrapper {
                 position: relative;
+                border-radius: 9px;
                 overflow: hidden;
 
                 img {
