Min height on results section

--- a/resources/sass/components/_pagination.scss
+++ b/resources/sass/components/_pagination.scss
@@ -14,8 +14,10 @@
         }
 
         &.disabled {
+
             .page-link {
                 border: none;
+                background: transparent;
             }
         }
 
