--- a/resources/sass/layout/_blog.scss
+++ b/resources/sass/layout/_blog.scss
@@ -17,6 +17,7 @@
 
         .blog-wrap {
             text-decoration: none !important;
+            margin-bottom: 30px;
 
             a {
                 text-decoration: none !important;
