Toggle buttons for corp content working

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -149,6 +149,10 @@ select.big {
     background-color: $green;
 }
 
+.bg-darkgreen {
+    background-color: #21afae;
+}
+
 .bg-pink {
     background-color: $pink;
 }
