--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -25,6 +25,7 @@ $blue: #1b71f3;
 $violet: #8e00fe;
 $hanblue: #5e15d1;
 $green: #00e09d;
+$darkGreen: #21afae;
 $pink: #ed0373;
 $grey: #363636;
 $white: #ffffff;
