--- a/resources/sass/pages/pagesections/_corporateContent.scss
+++ b/resources/sass/pages/pagesections/_corporateContent.scss
@@ -4,6 +4,13 @@
     }
 }
 
+.corporate-content {
+    background-color: #fff;
+    //border-bottom: 20px solid $teal;
+    box-shadow: inset 0px -20px 0px 0px $teal;
+
+}
+
 .corporate-content-section-1 {
     width: $hospital-image-width;
 }
@@ -13,6 +20,7 @@
     //@extend .bg-teal;
     padding-left: 8px;
     padding-top: 18px;
+    padding-bottom: 60px;
 
     .nav-tabs {
         box-shadow: inset 0px -2px 0px 0px rgba(236, 236, 236, 1);
@@ -50,9 +58,19 @@
     .special-offers-tab {
         padding: 14px 33px 17px;
     }
+
+
+    .btn-more-info {
+        bottom: 0;
+        left: 8px;
+    }
 }
 
 .corporate-content-section-3 {
     width: 14%;
+
 }
 
+.green-band {
+    height: 20px;
+}
