Carousel arrows added.

--- a/resources/sass/pages/pagesections/_corporateContent.scss
+++ b/resources/sass/pages/pagesections/_corporateContent.scss
@@ -81,6 +81,10 @@
                 max-width: 60px;
             }
         }
+
+        .video-caption {
+            margin-top: 5px;
+        }
     }
 
     .special-offers-tab {
@@ -96,9 +100,4 @@
 
 .corporate-content-section-3 {
     width: 14%;
-
-}
-
-.green-band {
-    height: 20px;
 }
