--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -174,3 +174,8 @@ $hospital-image-width: 150px;
 
 // Carousel
 $enable-gradients: false;
+$carousel-control-prev-icon-bg: url('../images/icons/carousel-prev.svg');
+$carousel-control-next-icon-bg: url('../images/icons/carousel-next.svg');
+$carousel-control-icon-width: 10px;
+$carousel-control-icon-height: 10px;
+$carousel-control-opacity: 1;
