Carousel completed with modal.

--- a/resources/sass/pages/pagesections/_corporateContent.scss
+++ b/resources/sass/pages/pagesections/_corporateContent.scss
@@ -41,6 +41,10 @@
         }
     }
 
+    .tab-content {
+        @include reset-row-spacing(12px);
+    }
+
     .tab-pane,
     .media-pane {
         padding-top: 13px;
@@ -57,7 +61,7 @@
         }
 
         .carousel-item {
-            @include aspect-ratio(190, 110);
+            @include aspect-ratio(100, 64, auto);
         }
 
         .indicators {
@@ -76,9 +80,12 @@
 
         // Video
         .video-wrapper {
+            @include aspect-ratio(187, 140);
+
             .player-button {
                 width: 50%;
-                max-width: 60px;
+                max-width: 45px;
+                //@include aspect-ratio(576, 512);
             }
         }
 
@@ -100,4 +107,36 @@
 
 .corporate-content-section-3 {
     width: 14%;
+}
+
+// Carousel styles
+.carousel-inner {
+    margin-bottom: 10px;
+}
+
+.carousel-item {
+    @include aspect-ratio(190, 110, auto);
+}
+
+.indicators {
+    @include reset-row-spacing(5px);
+    cursor: pointer;
+
+    .col-inner {
+        @include aspect-ratio(43, 40);
+        position: relative;
+        overflow: hidden;
+
+        img {
+            @include v-h-c;
+        }
+    }
+}
+
+.modal-carousel {
+    .carousel-control-prev-icon,
+    .carousel-control-next-icon {
+        width: 20px;
+        height: 20px;
+    }
 }
