--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -61,6 +61,7 @@ select::-ms-expand {
         @include placeholder {
             color: $darkerGrey;
             opacity: 1; // To fix a bug in firefox
+            font-family: 'SofiaPro-Medium', sans-serif;
         }
     }
 }
