--- a/resources/sass/components/basic/_select.scss
+++ b/resources/sass/components/basic/_select.scss
@@ -35,13 +35,12 @@
     &.big {
         // Button added by BS select
         .dropdown-toggle {
-            //height: 60px;
-            //line-height: 60px;
             padding: 15px 45px 15px 16px;
             width: 100%;
             border-radius: 10px;
             color: $darkerGrey;
-            font-size: 18px;
+            @include font-size(18);
+            @extend .SofiaPro-Medium;
             border: 2px solid $darkestWhite;
         }
     }
