--- a/resources/sass/layout/_blog.scss
+++ b/resources/sass/layout/_blog.scss
@@ -104,6 +104,10 @@
 }
 
 .blog-item-page {
+    .blog-title {
+        letter-spacing: -1.6px;
+    }
+
     main {
         padding-top: 25px;
     }
@@ -118,12 +122,14 @@
     .blog-content {
         p {
             @include font-size(20);
+            @extend .SofiaPro-SemiBold;
         }
     }
 
     .sharing-icons {
         li {
             margin-right: 12px;
+            width: 20px;
 
             svg {
                 height: 24px;
