--- a/resources/sass/components/_pagination.scss
+++ b/resources/sass/components/_pagination.scss
@@ -14,10 +14,11 @@
         }
 
         &.disabled {
-
             .page-link {
+                width: 16px;
                 border: none;
                 background: transparent;
+                transform: translateY(10px);
             }
         }
 
@@ -33,9 +34,9 @@
             line-height: 32px;
             color: $teal;
             font-size: 20px;
-            font-weight: 600;
             border-radius: 10px;
             @include transition(0.3s);
+            @extend .SofiaPro-SemiBold;
         }
 
         &.active {
@@ -46,7 +47,7 @@
             }
         }
 
-        &:hover .page-link {
+        &:not(.disabled):hover .page-link {
             background-color: $teal;
             color: $white;
         }
