--- a/resources/sass/layout/_header.scss
+++ b/resources/sass/layout/_header.scss
@@ -72,6 +72,7 @@
 
     .main-menu {
         margin: 0;
+        display: flex;
 
         li {
             position: relative;
@@ -82,7 +83,9 @@
             }
 
             > a {
-                display: inline-block;
+                height: 100%;
+                display: flex;
+                align-items: center;
                 color: $white;
                 font-size: 1.3em;
                 padding: 30px 15px;
