--- a/resources/sass/_typography.scss
+++ b/resources/sass/_typography.scss
@@ -112,6 +112,10 @@
     @include font-size(18, true);
 }
 
+.font-20 {
+    @include font-size(20, true);
+}
+
 .font-22 {
     @include font-size(22, true);
 }
