--- a/resources/sass/components/basic/_popover.scss
+++ b/resources/sass/components/basic/_popover.scss
@@ -23,7 +23,8 @@
     }
 
     &-regular {
-        box-shadow: 0 0 5px rgba(0, 0, 0, 0.16);
+        //box-shadow: 0 0 5px rgba(0, 0, 0, 0.16);
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
         //max-width: 400px;
 
         .arrow {
