--- a/resources/sass/components/basic/_popover.scss
+++ b/resources/sass/components/basic/_popover.scss
@@ -116,9 +116,9 @@
 
     &-doctor {
         //position: fixed !important;
-        max-width: inherit;
         @include media-breakpoint-up(lg) {
-            max-width: 50vw;
+            //max-width: 50vw;
+            max-width: 255px;
         }
 
         ul {
