--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -57,6 +57,7 @@
 @import 'components/solutions';
 @import 'components/form';
 @import 'components/accordion';
+@import 'components/doctor';
 
 // BASIC COMPONENTS
 @import 'components/banner';
