--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -31,6 +31,7 @@ $grey: #363636;
 $white: #ffffff;
 $greylight: #F6F6F6;
 $goldStar: #FAC917;
+$doctorGreen: #80efce;
 
 //Main Template colours
 $darkerWhite: #f5f5f5;
