Shift doctor popover upwards.

--- a/resources/sass/components/_doctor.scss
+++ b/resources/sass/components/_doctor.scss
@@ -3,7 +3,7 @@
     right: 0;
     background-color: $doctorGreen;
     width: 150px;
-    padding: 20px;
+    padding: 20px 12px 20px 20px;
     border-radius: 10px 0 0 10px;
     cursor: pointer;
 
