--- a/resources/sass/components/basic/_popover.scss
+++ b/resources/sass/components/basic/_popover.scss
@@ -126,6 +126,7 @@
 
     &-doctor {
         //position: fixed !important;
+        margin-top: -150px;
         @include media-breakpoint-up(lg) {
             //max-width: 50vw;
             max-width: 255px;
