--- a/resources/sass/components/basic/_popover.scss
+++ b/resources/sass/components/basic/_popover.scss
@@ -1,4 +1,9 @@
 // Popover
+
+[data-toggle*="popover"]{
+    cursor: pointer;
+}
+
 .popover {
     /* Style for "For privat" */
     color: $black;
