- Swap 'What is HC' section with 'How to use HC' section - On hover, text should change colour (to turquoise) and underline should be removed

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -1,5 +1,12 @@
 body {
     letter-spacing: -1px;
+
+    a {
+        &:hover {
+            text-decoration: none;
+            color: $turquoise !important;
+        }
+    }
 }
 
 .cookie-page,
