--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -32,6 +32,7 @@ $white: #ffffff;
 $greylight: #F6F6F6;
 $goldStar: #FAC917;
 $doctorGreen: #80efce;
+$turquoise: #40E0D0;
 
 //Main Template colours
 $darkerWhite: #f5f5f5;
