--- a/resources/sass/layout/_footer.scss
+++ b/resources/sass/layout/_footer.scss
@@ -5,7 +5,8 @@
     }
 
     a:hover {
-        color: inherit;
+        text-decoration: none;
+        color: $teal;
     }
 }
 
@@ -86,6 +87,17 @@
                 color: $white;
                 font-size: 2.5em;
                 left: 20px;
+
+                &:hover {
+                    color: $teal;
+
+                    svg {
+                        path {
+                            stroke: $teal;
+                            fill: $teal;
+                        }
+                    }
+                }
             }
         }
     }
