Change bullet points to turquoise.

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -66,7 +66,7 @@ ul.blue-dot {
             left: 0;
             width: 11px;
             height: 11px;
-            background-color: $blue;
+            background-color: $turq;
             border-radius: 50%;
         }
     }
@@ -74,12 +74,12 @@ ul.blue-dot {
     &.blue-dot_small {
 
         li {
-            color: $corporateContentGreen;
+            color: $black;
 
             &:before {
                 width: 9px;
                 height: 9px;
-                background-color: $corporateContentGreen;
+                background-color: $turq;
             }
         }
     }
@@ -131,7 +131,7 @@ select.big {
 }
 
 .bg-teal {
-    background-color: $teal;
+    background-color: $turq;
 }
 
 .bg-blue {
@@ -200,11 +200,11 @@ select.big {
 }
 
 .bg-not-yet-rated {
-    background-color: $teal;
+    background-color: $turq;
 }
 
 .col-teal {
-    color: $teal;
+    color: $turq;
 }
 
 .col-blue {
@@ -294,7 +294,7 @@ select.big {
 
 // Cookie popup styling
 .cc-theme-hc-cookie {
-    border: 3px solid $teal;
+    border: 3px solid $turq;
     border-radius: 10px;
     @extend .SofiaPro-Regular;
 
