--- a/resources/sass/components/_banner.scss
+++ b/resources/sass/components/_banner.scss
@@ -57,7 +57,7 @@
 
     .postcode-item {
         &:hover {
-            background-color: $teal;
+            background-color: $turq;
             color: $white;
             cursor: pointer;
             width: 100%;
