--- a/resources/sass/components/basic/_modal.scss
+++ b/resources/sass/components/basic/_modal.scss
@@ -71,7 +71,7 @@
         }
 
         .modal-content {
-            background-color: $teal;
+            background-color: $turq;
         }
 
         // Force it to show on test page
