--- a/resources/sass/components/basic/_rangeStyle.scss
+++ b/resources/sass/components/basic/_rangeStyle.scss
@@ -71,7 +71,7 @@
     //
     //    &::-webkit-slider-thumb {
     //        box-shadow: 0 0 0 3px $shade-0,
-    //        0 0 0 6px $teal;
+    //        0 0 0 6px $turq;
     //    }
     //}
 }
