--- a/resources/sass/pages/_faqsPage.scss
+++ b/resources/sass/pages/_faqsPage.scss
@@ -11,7 +11,7 @@
     }
 
     input.faq-search-input {
-        border: 3px solid $teal !important;
+        border: 3px solid $turq !important;
         height: 80px;
         //line-height: 80px;
         border-radius: 40px !important;
