--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -183,7 +183,7 @@
     }
 
     .result-item-parent {
-        background-color: $teal;
+        background-color: $turq;
 
 
     }
@@ -404,7 +404,7 @@
 
         &:hover,
         &:active {
-            color: $teal;
+            color: $turq;
             text-decoration: none;
         }
     }
