--- a/resources/sass/pages/pagesections/_howSection.scss
+++ b/resources/sass/pages/pagesections/_howSection.scss
@@ -45,7 +45,7 @@
             transform-origin: 50% 50%;
             height: 100%;
             width: auto;
-            fill: $teal;
+            fill: $turq;
         }
     }
 
