--- a/resources/sass/components/_solutions.scss
+++ b/resources/sass/components/_solutions.scss
@@ -45,7 +45,7 @@
                     letter-spacing: -0.9px;
 
                     &:hover {
-                        background-color: darken($teal, 5%);
+                        background-color: darken($turq, 5%);
                         text-decoration: none;
                     }
                 }
@@ -102,7 +102,7 @@
             display: inline-block;
             width: 18px;
             height: 10px;
-            background-color: $teal;
+            background-color: $turq;
             background-image: url('../images/up-arrow.svg');
             background-size: cover;
             background-repeat: no-repeat;
