--- a/resources/sass/components/basic/_range.scss
+++ b/resources/sass/components/basic/_range.scss
@@ -65,7 +65,7 @@
         width: calc(calc(100% - #{var(--range-handle-size)}) / 6);
         flex: calc(calc(100% - #{var(--range-handle-size)}) / 6);
         text-align: center;
-        color: $teal;
+        color: $turq;
         @include font-size(14);
         @extend .SofiaPro-Bold;
         cursor: pointer;
@@ -97,7 +97,7 @@
 
         &.fill {
             &:before {
-                background-color: $teal;
+                background-color: $turq;
             }
         }
     }
