change some font awesome to inline svg

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -66,8 +66,8 @@
 @import 'components/basic/input';
 @import 'components/basic/helpLink';
 @import 'components/basic/lightBox';
-@import 'components/basic/rangeStyle';
-@import 'components/basic/range';
+//@import 'components/basic/rangeStyle';
+//@import 'components/basic/range';
 @import 'components/basic/bsSlider';
 @import 'components/basic/popover';
 @import 'components/basic/modal';
