--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -177,8 +177,8 @@
         &.selected {
             svg {
                 path {
-                    stroke: red;
-                    fill: $red;
+                    stroke: $pink;
+                    fill: $pink;
                 }
             }
         }
@@ -312,6 +312,7 @@
             svg {
                 @include v-c;
                 right: 8px;
+                width: 0.6rem;
             }
         }
 
@@ -387,14 +388,14 @@
             display: inline-block;
             text-align: left;
 
-            &:before {
-                content: '';
-                background-image: url('../images/icons/circle-check.svg');
-                @include icon-bg-center;
+            svg {
+                //content: '';
+                //background-image: url('../images/icons/circle-check.svg');
+                //@include icon-bg-center;
                 @include v-c;
-                left: 0;
-                width: 40px;
-                height: 40px;
+                left: 10px;
+                width: 20px;
+                height: 20px;
             }
         }
 
