- "Compare" bottom right, heart should fill when there are hospitals selctected

--- a/resources/sass/components/_solutions.scss
+++ b/resources/sass/components/_solutions.scss
@@ -181,6 +181,11 @@
             }
         }
     }
+
+    .solutions-compare-heart.active {
+        fill: $pink;
+        stroke: $pink;
+    }
 }
 
 
